--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ header h1 {
 main {
     background-color:darkcyan;
     width: 75%;
+    height: 640px;
     margin-left: 12.5%;
 }
 
@@ -23,6 +24,8 @@ main {
 .btn-input {
     display: flex;
     justify-content:center;
+    position:relative;
+    bottom: 5px;
 }
 
 #submit-answer {
@@ -33,4 +36,13 @@ main {
 
 li {
     list-style:none;
+    margin: 10px auto;
+    width: 25em;
+    border-style:solid;
+    border-width:1px;
+    border-radius: 10px;
+    font-weight:bold;
+    font-size:larger;
+    background-color:darkgrey;
+    box-shadow: 3px 3px 3px black;
 }
