--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ header h1 {
 main {
     background-color:darkcyan;
     width: 75%;
-    height: 640px;
+    min-height: 640px;
     margin-left: 12.5%;
 }
 
@@ -32,6 +32,13 @@ main {
     width: 200px;
     border-radius: 5px;
     font-size:large;
+}
+
+#retake-button {
+    width: 200px;
+    border-radius: 5px;
+    font-size:large;
+    background-color:yellow;
 }
 
 ul li {
